# llm_serv

./: .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  pyproject.toml
examples/api/: conversation_example.py  simple_api_example.py  structured_response_api_example.py
examples/client/: concurrency_test.py  simple_client_example.py  simple_client_image_example.py  structured_response_client_example.py  test_all_models.py
llm_serv/: __init__.py  api.py  client.py  logger.py  models.yaml  registry.py  server.py
llm_serv/conversation/: __init__.py  conversation.py  document.py  image.py  message.py  role.py
llm_serv/core/: base.py  exceptions.py  oai.py
llm_serv/core/components/: request.py  response.py  tokens.py  types.py
llm_serv/core/providers/: _delete_oai.py  aws.py  azure.py  gcp.py  mock.py  oai.py  openrouter.py  together.py
llm_serv/metrics/: log_manager.py  metrics.py
llm_serv/providers/: aws.py  azure.py  base.py  oai.py
llm_serv/structured_response/: README.md  _test copy.py  _test_to_string.py  from_text.py  model.py  test.py  to_text.py  utils.py
llm_serv/structured_response/converters/: deserialize.py  from_basemodel.py  from_prompt.py  manual.py  serialize.py  to_prompt.py  to_string.py
llm_serv/structured_response/local_test/: from_basemodel.py  from_prompt.py  from_prompt_clean.py  serialize.py  to_prompt.py  utils_test.py
llm_serv/structured_response/tests/: test.py  test_to_string.py
llm_serv/structured_response_old/: from_text.py  model.py  to_text.py
llm_serv/structured_response_old/tests/: test.py  test_to_string.py
tests/: test_api.py  test_client.py  test_from_prompt.py  test_log_manager.py
tests/conversation/: test_document.py  test_message.py
tests/providers/: test_aws.py  test_openai.py
tests/structured_response/: test_regex_parser.py  test_structured_response_advanced_tests.py  test_structured_response_basic_tests.py  test_structured_response_plain_schema_tests.py
