[tool.poetry]
name = "llm_serv"
version = "2025.6.3"
description = "LLM Service"
authors = ["Stefan Dumitrescu <dumitrescu.stefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
pytest = "8.3.3"
fastapi = "^0.115.0"
uvicorn = "^0.32.1"
PyYAML = "^6.0.1"
rich = "^13.9.4"
pillow = "10.4.0"
dateparser = "^1.2.1"
pytest-asyncio = "^0.26.0"
requests = "^2.32.4"
openai = "^1.81.0"
aioboto3 = "^14.3.0"
colorama = "^0.4.6"
google-genai = "^1.18.0"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "requests-mock>=1.11.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
