[tool.poetry]
name = "llm_serv"
version = "2025.9.16"
description = "LLM Service"
authors = ["Stefan Dumitrescu <dumitrescu.stefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.7"
pytest = "8.3.3"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
PyYAML = "^6.0.1"
rich = "^13.9.4"
pillow = "^10.1.0"
dateparser = "^1.2.1"
pytest-asyncio = "^0.26.0"
requests = "^2.32.4"
lxml = "^6.0.0"
msgspec = "^0.19.0"
openai = "^1.107.3"
aioboto3 = "^15.1.0"
colorama = "^0.4.6"
google-genai = "^1.37.0"



[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "requests-mock>=1.11.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the flake8-bugbear rules in addition to the defaults.
select = ["E", "F", "B"]
ignore = []
line-length = 140

# Allow unused variables in `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
